Hamburger menu color updates

--- a/set-voice.html
+++ b/set-voice.html
@@ -17,7 +17,7 @@
       <a href="/">
         <img src="/images/logo.svg" alt="Logo" class="relative z-11 w-[9rem] dark:brightness-[1.5]">
       </a>
-      <button class="sidebar-toggle p-2 text-gray-600 hover:bg-gray-200 rounded focus:outline-none ms-3">
+      <button class="sidebar-toggle p-2 dark:text-white hover:bg-gray-200 dark:hover:bg-black transition-all transition-duration-500 rounded focus:outline-none ms-3">
         <!-- Hamburger Icon -->
         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
           stroke-width="2">
@@ -44,7 +44,7 @@
           </div>
           <div class="sidebar-toggle xl:hidden text-3xl">&times;</div>
           <button id="hamburgerBtn"
-            class="p-2 text-gray-600 dark:text-white hover:bg-gray-200 rounded focus:outline-none hide-on-collapse hidden xl:block">
+            class="p-2 text-gray-600 dark:text-white hover:bg-gray-200 dark:hover:bg-black transition-all transition-duration-500 rounded focus:outline-none hide-on-collapse hidden xl:block">
             <!-- Hamburger Icon -->
             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
               xmlns="http://www.w3.org/2000/svg" stroke-width="2">
