--- a/voice-creations.html
+++ b/voice-creations.html
@@ -18,7 +18,7 @@
       <a href="/">
         <img src="/images/logo.svg" alt="Logo" class="relative z-11 w-[9rem] dark:brightness-[1.5]">
       </a>
-      <button class="sidebar-toggle p-2 text-gray-600 hover:bg-gray-200 rounded focus:outline-none ms-3">
+      <button class="sidebar-toggle p-2 dark:text-white hover:bg-gray-200 dark:hover:bg-black transition-all transition-duration-500 rounded focus:outline-none ms-3">
         <!-- Hamburger Icon -->
         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
           stroke-width="2">
@@ -46,7 +46,7 @@
           </div>
           <div class="sidebar-toggle xl:hidden text-3xl">&times;</div>
           <button id="hamburgerBtn"
-            class="p-2 text-gray-600 dark:text-white hover:bg-gray-200 rounded focus:outline-none hide-on-collapse hidden xl:block">
+            class="p-2 text-gray-600 dark:text-white hover:bg-gray-200 dark:hover:bg-black transition-all transition-duration-500 rounded focus:outline-none hide-on-collapse hidden xl:block">
             <!-- Hamburger Icon -->
             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
               xmlns="http://www.w3.org/2000/svg" stroke-width="2">
@@ -338,7 +338,9 @@
   <!-- END WRAPPER -->
 
   <div
-    class="change-picture-popup fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-secondary rounded-lg shadow-lg p-6  w-full max-w-[400px] md:max-w-[550px] z-30 hidden">
+    class="change-picture-popup fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-secondary rounded-lg shadow-lg p-6 w-full max-w-[400px] md:max-w-[550px] z-30 hidden">
+
+    <div class="close-popup absolute end-0 top-0 me-4 top-3 cursor-pointer text-primary text-3xl leading-none">&times;</div>
 
     <!-- Row -->
     <div class="grid grid-cols-3 md:grid-cols-4 gap-5 p-4">
