--- a/voice-profiles.html
+++ b/voice-profiles.html
@@ -17,7 +17,7 @@
       <a href="/">
         <img src="/images/logo.svg" alt="Logo" class="relative z-11 w-[9rem] dark:brightness-[1.5]">
       </a>
-      <button class="sidebar-toggle p-2 text-gray-600 hover:bg-gray-200 rounded focus:outline-none ms-3">
+      <button class="sidebar-toggle p-2 dark:text-white hover:bg-gray-200 dark:hover:bg-black transition-all transition-duration-500 rounded focus:outline-none ms-3">
         <!-- Hamburger Icon -->
         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
           stroke-width="2">
@@ -45,7 +45,7 @@
           </div>
           <div class="sidebar-toggle xl:hidden text-3xl">&times;</div>
           <button id="hamburgerBtn"
-            class="p-2 text-gray-600 dark:text-white hover:bg-gray-200 rounded focus:outline-none hide-on-collapse hidden xl:block">
+            class="p-2 text-gray-600 dark:text-white hover:bg-gray-200 dark:hover:bg-black transition-all transition-duration-500 rounded focus:outline-none hide-on-collapse hidden xl:block">
             <!-- Hamburger Icon -->
             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
               xmlns="http://www.w3.org/2000/svg" stroke-width="2">
@@ -220,9 +220,6 @@
         <!-- Card -->
         <div
           class="hover:bg-[#0A574E] bg-gray px-3 py-6 flex flex-col items-center justify-between gap-2 rounded-xl hover:text-white transition duration-500 profile-card h-full relative hover:translate-x-[3px]">
-          <div
-            class="profile-card__select w-4 h-4 border-2 border-primary bg-secondary rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3">
-          </div>
           <div class="text-center">
             <img class="rounded mx-auto block mb-2 w-20 object-cover object-center" src="/images/grace-img.svg"
               alt="content">
@@ -260,9 +257,7 @@
         <!-- Card -->
         <div
           class="hover:bg-[#0A574E] bg-gray px-3 py-6 flex flex-col items-center justify-between gap-2 rounded-xl hover:text-white transition duration-500 profile-card h-full relative hover:translate-x-[3px]">
-          <div
-            class="profile-card__select w-4 h-4 border-2 border-primary bg-secondary rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3">
-          </div>
+  
           <div class="text-center">
             <img class="rounded mx-auto block mb-2 w-20 object-cover object-center" src="/images/Leslie-img.svg"
               alt="content">
@@ -297,9 +292,7 @@
         <!-- Card -->
         <div
           class="hover:bg-[#0A574E] bg-gray px-3 py-6 flex flex-col items-center justify-between gap-2 rounded-xl hover:text-white transition duration-500 profile-card h-full relative hover:translate-x-[3px]">
-          <div
-            class="profile-card__select w-4 h-4 border-2 border-primary bg-secondary rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3">
-          </div>
+  
           <div class="text-center">
             <img class="rounded mx-auto block mb-2 w-20 object-cover object-center" src="/images/Sydney-img.svg"
               alt="content">
@@ -335,9 +328,7 @@
         <!-- Card -->
         <div
           class="hover:bg-[#0A574E] bg-gray px-3 py-6 flex flex-col items-center justify-between gap-2 rounded-xl hover:text-white transition duration-500 profile-card h-full relative hover:translate-x-[3px]">
-          <div
-            class="profile-card__select w-4 h-4 border-2 border-primary bg-secondary rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3">
-          </div>
+  
           <div class="text-center">
             <img class="rounded mx-auto block mb-2 w-20 object-cover object-center" src="/images/Kai-img.svg"
               alt="content">
@@ -373,9 +364,7 @@
         <!-- Card -->
         <div
           class="hover:bg-[#0A574E] bg-gray px-3 py-6 flex flex-col items-center justify-between gap-2 rounded-xl hover:text-white transition duration-500 profile-card h-full relative hover:translate-x-[3px]">
-          <div
-            class="profile-card__select w-4 h-4 border-2 border-primary bg-secondary rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3">
-          </div>
+  
           <div class="text-center">
             <img class="rounded mx-auto block mb-2 w-20 object-cover object-center" src="/images/sean-img.svg"
               alt="content">
@@ -411,9 +400,7 @@
         <!-- Card -->
         <div
           class="hover:bg-[#0A574E] bg-gray px-3 py-6 flex flex-col items-center justify-between gap-2 rounded-xl hover:text-white transition duration-500 profile-card h-full relative hover:translate-x-[3px]">
-          <div
-            class="profile-card__select w-4 h-4 border-2 border-primary bg-secondary rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3">
-          </div>
+  
           <div class="text-center">
             <img class="rounded mx-auto block mb-2 w-20 object-cover object-center" src="/images/rob.svg" alt="content">
             <h2 class="text-2xl font-semibold title-font text-primary">Rob</h2>
@@ -448,9 +435,7 @@
         <!-- Card -->
         <div
           class="hover:bg-[#0A574E] bg-gray px-3 py-6 flex flex-col items-center justify-between gap-2 rounded-xl hover:text-white transition duration-500 profile-card h-full relative hover:translate-x-[3px]">
-          <div
-            class="profile-card__select w-4 h-4 border-2 border-primary bg-secondary rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3">
-          </div>
+  
           <div class="text-center">
             <img class="rounded mx-auto block mb-2 w-20 object-cover object-center" src="/images/tina-img.svg"
               alt="content">
@@ -486,9 +471,7 @@
         <!-- Card -->
         <div
           class="hover:bg-[#0A574E] bg-gray px-3 py-6 flex flex-col items-center justify-between gap-2 rounded-xl hover:text-white transition duration-500 profile-card h-full relative hover:translate-x-[3px]">
-          <div
-            class="profile-card__select w-4 h-4 border-2 border-primary bg-secondary rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3">
-          </div>
+  
           <div class="text-center">
             <img class="rounded mx-auto block mb-2 w-20 object-cover object-center" src="/images/fionna-img.svg"
               alt="content">
