Profile Card Checkbox Updated + Setting autoexpand when child page is active

--- a/set-voice.html
+++ b/set-voice.html
@@ -218,7 +218,7 @@
         <!-- Card -->
         <div
           class="hover:bg-[#0A574E] bg-gray px-3 py-6 flex flex-col items-center justify-between gap-2 rounded-xl hover:text-white transition duration-500 profile-card h-full relative hover:translate-x-[3px]">
-          <div class="profile-card__select w-4 h-4 border-2 border-primary bg-secondary rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3"></div>
+          <div class="profile-card__select w-4 h-4 border-2 border-black rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3"></div>
           <div class="text-center">
             <img class="rounded mx-auto block mb-2 w-20 object-cover object-center" src="/images/grace-img.svg"
               alt="content">
@@ -256,7 +256,7 @@
         <!-- Card -->
         <div
           class="hover:bg-[#0A574E] bg-gray px-3 py-6 flex flex-col items-center justify-between gap-2 rounded-xl hover:text-white transition duration-500 profile-card h-full relative hover:translate-x-[3px]">
-          <div class="profile-card__select w-4 h-4 border-2 border-primary bg-secondary rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3"></div>
+          <div class="profile-card__select w-4 h-4 border-2 border-black rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3"></div>
           <div class="text-center">
             <img class="rounded mx-auto block mb-2 w-20 object-cover object-center" src="/images/Leslie-img.svg"
               alt="content">
@@ -291,7 +291,7 @@
         <!-- Card -->
         <div
           class="hover:bg-[#0A574E] bg-gray px-3 py-6 flex flex-col items-center justify-between gap-2 rounded-xl hover:text-white transition duration-500 profile-card h-full relative hover:translate-x-[3px]">
-          <div class="profile-card__select w-4 h-4 border-2 border-primary bg-secondary rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3"></div>
+          <div class="profile-card__select w-4 h-4 border-2 border-black rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3"></div>
           <div class="text-center">
             <img class="rounded mx-auto block mb-2 w-20 object-cover object-center" src="/images/Sydney-img.svg"
               alt="content">
@@ -327,7 +327,7 @@
         <!-- Card -->
         <div
           class="hover:bg-[#0A574E] bg-gray px-3 py-6 flex flex-col items-center justify-between gap-2 rounded-xl hover:text-white transition duration-500 profile-card h-full relative hover:translate-x-[3px]">
-          <div class="profile-card__select w-4 h-4 border-2 border-primary bg-secondary rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3"></div>
+          <div class="profile-card__select w-4 h-4 border-2 border-black rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3"></div>
           <div class="text-center">
             <img class="rounded mx-auto block mb-2 w-20 object-cover object-center" src="/images/Kai-img.svg"
               alt="content">
@@ -363,7 +363,7 @@
         <!-- Card -->
         <div
           class="hover:bg-[#0A574E] bg-gray px-3 py-6 flex flex-col items-center justify-between gap-2 rounded-xl hover:text-white transition duration-500 profile-card h-full relative hover:translate-x-[3px]">
-          <div class="profile-card__select w-4 h-4 border-2 border-primary bg-secondary rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3"></div>
+          <div class="profile-card__select w-4 h-4 border-2 border-black rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3"></div>
           <div class="text-center">
             <img class="rounded mx-auto block mb-2 w-20 object-cover object-center" src="/images/sean-img.svg"
               alt="content">
@@ -399,7 +399,7 @@
         <!-- Card -->
         <div
           class="hover:bg-[#0A574E] bg-gray px-3 py-6 flex flex-col items-center justify-between gap-2 rounded-xl hover:text-white transition duration-500 profile-card h-full relative hover:translate-x-[3px]">
-          <div class="profile-card__select w-4 h-4 border-2 border-primary bg-secondary rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3"></div>
+          <div class="profile-card__select w-4 h-4 border-2 border-black rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3"></div>
           <div class="text-center">
             <img class="rounded mx-auto block mb-2 w-20 object-cover object-center" src="/images/rob.svg" alt="content">
             <h2 class="text-2xl font-semibold title-font text-primary">Rob</h2>
@@ -434,7 +434,7 @@
         <!-- Card -->
         <div
           class="hover:bg-[#0A574E] bg-gray px-3 py-6 flex flex-col items-center justify-between gap-2 rounded-xl hover:text-white transition duration-500 profile-card h-full relative hover:translate-x-[3px]">
-          <div class="profile-card__select w-4 h-4 border-2 border-primary bg-secondary rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3"></div>
+          <div class="profile-card__select w-4 h-4 border-2 border-black rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3"></div>
           <div class="text-center">
             <img class="rounded mx-auto block mb-2 w-20 object-cover object-center" src="/images/tina-img.svg"
               alt="content">
@@ -470,7 +470,7 @@
         <!-- Card -->
         <div
           class="hover:bg-[#0A574E] bg-gray px-3 py-6 flex flex-col items-center justify-between gap-2 rounded-xl hover:text-white transition duration-500 profile-card h-full relative hover:translate-x-[3px]">
-          <div class="profile-card__select w-4 h-4 border-2 border-primary bg-secondary rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3"></div>
+          <div class="profile-card__select w-4 h-4 border-2 border-black rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3"></div>
           <div class="text-center">
             <img class="rounded mx-auto block mb-2 w-20 object-cover object-center" src="/images/fionna-img.svg"
               alt="content">
